--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <!-- hero area -->
-    <section class="hero-area bg-primary" id="parallax">
+    <section class="hero-area bg-primary-1" id="parallax">
       <div class="container">
         <div class="row">
           <div class="col-lg-11 mx-auto">
