--- a/index.html
+++ b/index.html
@@ -495,8 +495,8 @@
             var CurrentYear = new Date().getFullYear();
             document.write(CurrentYear);
           </script>
-          Designed &amp; Developed by
-          <a class="text-white-50" href="Themefisher">Themefisher</a>
+          
+          <a class="text-white-50" >Marianella</a>
         </p>
       </div>
     </footer>
