--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <br />
               <strong
                 ><span class="fade-in-word" style="--order: 4"
-                  >Vos</span
+                  >Vos.</span
                 ></strong
               >
             </h1>
