--- a/index.html
+++ b/index.html
@@ -96,21 +96,13 @@
 
       <!-- social icon -->
       <ul class="list-unstyled ml-5 mt-3 position-relative zindex-1">
-        <li class="mb-3">
-          <a class="text-white" href="https://themefisher.com/"
-            ><i class="ti-facebook"></i
-          ></a>
-        </li>
+
         <li class="mb-3">
           <a class="text-white" href="https://www.instagram.com/marianellaasesoradeimagen/"
             ><i class="ti-instagram"></i
           ></a>
         </li>
-        <li class="mb-3">
-          <a class="text-white" href="https://themefisher.com/"
-            ><i class="ti-twitter"></i
-          ></a>
-        </li>
+
       </ul>
       <!-- /social icon -->
     </section>
@@ -476,7 +468,7 @@
             <div class="col-md-6">
               <h5 class="text-light">Email</h5>
               <p class="text-white paragraph-lg font-secondary">
-                steve.fruits@email.com
+                luciano.martin.vargas.torr@gmail.com
               </p>
             </div>
             <div class="col-md-6">
