--- a/marianella/theme/index.html
+++ b/marianella/theme/index.html
@@ -419,7 +419,7 @@
           <div class="col-lg-8 mx-auto">
             <div class="bg-white rounded text-center p-5 shadow-down">
               <h4 class="mb-80">Contact Form</h4>
-              <form id="contact-form" class="row" action="https://formspree.io/f/mbldwdjd" method="POST">
+              <form id="contact-form" class="row" action="https://formspree.io/f/xdkabade" method="POST">
                 <div class="col-md-6">
                   <input
                     type="text"
